@@ -36,6 +36,8 @@ The minimum Spring Framework version dependency is 5.2.0.
 
 The minimum `amqp-client` Java client library version is 5.7.0.
 
+The minimum `stream-client` Java client library for stream queues is 0.7.0.
+
 ===== Very, Very Quick
 
 This section offers the fastest introduction.
